--- a/audio-transfer-app/index.html
+++ b/audio-transfer-app/index.html
@@ -218,6 +218,131 @@
                                     </div>
                                 </div>
 
+                                <!-- Playback Controls -->
+                                <div class="card bg-dark border-secondary mb-4">
+                                    <div class="card-body">
+                                        <h5 class="mb-3">Playback Controls</h5>
+                                        <div class="row align-items-center gy-3">
+                                            <div class="col-md-8">
+                                                <label for="playbackVolume" class="form-label">Volume</label>
+                                                <input type="range" class="form-range" id="playbackVolume" min="0" max="200" step="1" value="100">
+                                                <small class="text-muted">Adjust listener volume (0% - 200%)</small>
+                                            </div>
+                                            <div class="col-md-4">
+                                                <div class="form-check mt-4">
+                                                    <input class="form-check-input" type="checkbox" id="loudnessBoost">
+                                                    <label class="form-check-label" for="loudnessBoost">
+                                                        Loudness Boost
+                                                    </label>
+                                                    <div><small class="text-muted">Adds mild compression and preamp</small></div>
+                                                </div>
+                                            </div>
+                                            <div class="mt-3">
+                                                <small class="text-muted">Status: <span id="playbackStatus">—</span></small>
+                                            </div>
+                                            <hr class="text-secondary"/>
+                                            <div class="row gy-2">
+                                                <div class="col-md-4">
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" type="checkbox" id="adaptiveJitter" checked>
+                                                        <label class="form-check-label" for="adaptiveJitter">Adaptive Jitter</label>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-4">
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" type="checkbox" id="driftCorrection">
+                                                        <label class="form-check-label" for="driftCorrection">Drift Correction (beta)</label>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-4 text-md-end">
+                                                    <button class="btn btn-sm btn-outline-light" id="resetSync">Reset Sync</button>
+                                                    <button class="btn btn-sm btn-outline-danger ms-2" id="emergencyReset">Emergency Reset</button>
+                                                </div>
+                                            </div>
+                                            <div class="row mt-2">
+                                                <div class="col-md-4">
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" type="checkbox" id="softClipLimiter">
+                                                        <label class="form-check-label" for="softClipLimiter">Soft Clip Limiter</label>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-4">
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" type="checkbox" id="legacyTimingMode" checked>
+                                                        <label class="form-check-label" for="legacyTimingMode">Legacy Timing Mode</label>
+                                                        <div><small class="text-muted">Use simple scheduling (fix pitch).</small></div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="row mt-2">
+                                                <div class="col-md-6 col-lg-4">
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" type="checkbox" id="gapDither" checked>
+                                                        <label class="form-check-label" for="gapDither">Subtle Gap Dither/Fade</label>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        <!-- Removed pseudo stereo enhance (user wants only real stereo when available) -->
+                                            <hr class="text-secondary"/>
+                                            <div class="row gy-3">
+                                                <div class="col-md-6">
+                                                    <label class="form-label mb-1">Playback Mode</label>
+                                                    <div class="d-grid gap-2">
+                                                        <div class="btn-group" role="group">
+                                                            <input type="radio" class="btn-check" name="playbackMode" id="modeLowLat" autocomplete="off" checked>
+                                                            <label class="btn btn-outline-primary" for="modeLowLat">Low</label>
+                                                            <input type="radio" class="btn-check" name="playbackMode" id="modeUltraLow" autocomplete="off">
+                                                            <label class="btn btn-outline-primary" for="modeUltraLow">Ultra</label>
+                                                            <input type="radio" class="btn-check" name="playbackMode" id="modeHighStab" autocomplete="off">
+                                                            <label class="btn btn-outline-primary" for="modeHighStab">Stable</label>
+                                                        </div>
+                                                        <div class="form-check">
+                                                            <input class="form-check-input" type="checkbox" id="naturalBypass">
+                                                            <label class="form-check-label" for="naturalBypass">Natural Bypass (no EQ/comp)</label>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-6 mt-md-0 mt-3">
+                                                    <label for="eqPreset" class="form-label mb-1">EQ Preset</label>
+                                                    <select id="eqPreset" class="form-select form-select-sm bg-dark text-light border-secondary">
+                                                        <option value="flat" selected>Flat</option>
+                                                        <option value="bass">Bass Boost</option>
+                                                        <option value="treble">Treble Lift</option>
+                                                        <option value="vshape">V-Shape</option>
+                                                        <option value="voice">Voice</option>
+                                                        <option value="warm">Warm</option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                            <div class="mt-3">
+                                                <div class="row gx-2 gy-2" id="eqSliders">
+                                                    <div class="col">
+                                                        <label class="form-label small">60Hz</label>
+                                                        <input type="range" min="-12" max="12" step="0.5" value="0" data-band="60" class="form-range eq-band">
+                                                    </div>
+                                                    <div class="col">
+                                                        <label class="form-label small">250Hz</label>
+                                                        <input type="range" min="-12" max="12" step="0.5" value="0" data-band="250" class="form-range eq-band">
+                                                    </div>
+                                                    <div class="col">
+                                                        <label class="form-label small">1k</label>
+                                                        <input type="range" min="-12" max="12" step="0.5" value="0" data-band="1000" class="form-range eq-band">
+                                                    </div>
+                                                    <div class="col">
+                                                        <label class="form-label small">4k</label>
+                                                        <input type="range" min="-12" max="12" step="0.5" value="0" data-band="4000" class="form-range eq-band">
+                                                    </div>
+                                                    <div class="col">
+                                                        <label class="form-label small">12k</label>
+                                                        <input type="range" min="-12" max="12" step="0.5" value="0" data-band="12000" class="form-range eq-band">
+                                                    </div>
+                                                </div>
+                                                <small class="text-muted">Equalizer (±12 dB per band)</small>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
                                 <!-- Manual Connection -->
                                 <div class="card bg-dark border-secondary">
                                     <div class="card-body">
