--- a/audio-transfer-app/index.html
+++ b/audio-transfer-app/index.html
@@ -237,74 +237,32 @@
                                                     <div><small class="text-muted">Adds mild compression and preamp</small></div>
                                                 </div>
                                             </div>
-                                            <div class="mt-3">
+                                            <div class="mt-3 justify-content-center" id="playbackStatusRow">
                                                 <small class="text-muted">Status: <span id="playbackStatus">—</span></small>
                                             </div>
+                                            <div class="mt-2 d-flex flex-wrap gap-2 justify-content-start justify-content-md-end align-items-center">
+                                                <button class="btn btn-sm btn-outline-light" id="resetSync">Reset Sync</button>
+                                            </div>
                                             <hr class="text-secondary"/>
-                                            <div class="row gy-2">
-                                                <div class="col-md-4">
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" id="adaptiveJitter" checked>
-                                                        <label class="form-check-label" for="adaptiveJitter">Adaptive Jitter</label>
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-4">
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" id="driftCorrection">
-                                                        <label class="form-check-label" for="driftCorrection">Drift Correction (beta)</label>
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-4 text-md-end">
-                                                    <button class="btn btn-sm btn-outline-light" id="resetSync">Reset Sync</button>
-                                                    <button class="btn btn-sm btn-outline-danger ms-2" id="emergencyReset">Emergency Reset</button>
-                                                </div>
-                                            </div>
-                                            <div class="row mt-2">
-                                                <div class="col-md-4">
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" id="softClipLimiter">
-                                                        <label class="form-check-label" for="softClipLimiter">Soft Clip Limiter</label>
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-4">
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" id="legacyTimingMode" checked>
-                                                        <label class="form-check-label" for="legacyTimingMode">Legacy Timing Mode</label>
-                                                        <div><small class="text-muted">Use simple scheduling (fix pitch).</small></div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="row mt-2">
-                                                <div class="col-md-6 col-lg-4">
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" id="gapDither" checked>
-                                                        <label class="form-check-label" for="gapDither">Subtle Gap Dither/Fade</label>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        <!-- Removed pseudo stereo enhance (user wants only real stereo when available) -->
-                                            <hr class="text-secondary"/>
-                                            <div class="row gy-3">
-                                                <div class="col-md-6">
+                                            <div class="row gy-3 align-items-stretch">
+                                                <div class="col-12 col-lg-7 d-flex flex-column">
                                                     <label class="form-label mb-1">Playback Mode</label>
-                                                    <div class="d-grid gap-2">
-                                                        <div class="btn-group" role="group">
-                                                            <input type="radio" class="btn-check" name="playbackMode" id="modeLowLat" autocomplete="off" checked>
-                                                            <label class="btn btn-outline-primary" for="modeLowLat">Low</label>
-                                                            <input type="radio" class="btn-check" name="playbackMode" id="modeUltraLow" autocomplete="off">
-                                                            <label class="btn btn-outline-primary" for="modeUltraLow">Ultra</label>
-                                                            <input type="radio" class="btn-check" name="playbackMode" id="modeHighStab" autocomplete="off">
-                                                            <label class="btn btn-outline-primary" for="modeHighStab">Stable</label>
-                                                        </div>
-                                                        <div class="form-check">
-                                                            <input class="form-check-input" type="checkbox" id="naturalBypass">
-                                                            <label class="form-check-label" for="naturalBypass">Natural Bypass (no EQ/comp)</label>
-                                                        </div>
+                                                    <div class="btn-group mb-2 flex-wrap" role="group">
+                                                        <input type="radio" class="btn-check" name="playbackMode" id="modeLowLat" autocomplete="off" checked>
+                                                        <label class="btn btn-outline-primary" for="modeLowLat">Low</label>
+                                                        <input type="radio" class="btn-check" name="playbackMode" id="modeUltraLow" autocomplete="off">
+                                                        <label class="btn btn-outline-primary" for="modeUltraLow">Ultra</label>
+                                                        <input type="radio" class="btn-check" name="playbackMode" id="modeHighStab" autocomplete="off">
+                                                        <label class="btn btn-outline-primary" for="modeHighStab">Stable</label>
+                                                    </div>
+                                                    <div class="form-check small">
+                                                        <input class="form-check-input" type="checkbox" id="naturalBypass">
+                                                        <label class="form-check-label" for="naturalBypass">Natural Bypass (no EQ/comp)</label>
                                                     </div>
                                                 </div>
-                                                <div class="col-md-6 mt-md-0 mt-3">
+                                                <div class="col-12 col-lg-5 d-flex flex-column">
                                                     <label for="eqPreset" class="form-label mb-1">EQ Preset</label>
-                                                    <select id="eqPreset" class="form-select form-select-sm bg-dark text-light border-secondary">
+                                                    <select id="eqPreset" class="form-select form-select-sm bg-dark text-light border-secondary mb-2">
                                                         <option value="flat" selected>Flat</option>
                                                         <option value="bass">Bass Boost</option>
                                                         <option value="treble">Treble Lift</option>
@@ -312,6 +270,7 @@
                                                         <option value="voice">Voice</option>
                                                         <option value="warm">Warm</option>
                                                     </select>
+                                                    <small class="text-muted">Choose a tonal profile or adjust bands below</small>
                                                 </div>
                                             </div>
                                             <div class="mt-3">
