--- a/audio-transfer-app/index.html
+++ b/audio-transfer-app/index.html
@@ -368,6 +368,9 @@
     <!-- Toast Container -->
     <div class="toast-container position-fixed bottom-0 end-0 p-3" id="toastContainer"></div>
 
+    <!-- Hidden audio element for Media Session API notification support -->
+    <audio id="mediaSessionAudio" src="" loop style="display:none"></audio>
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Socket.IO Client -->
